--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="" class="nav-link"></a>Home</li>
-                    <li class="nav-item"><a href="" class="nav-link"></a>About me</li>
+                    <li class="nav-item"><a href="" class="nav-link"></a>About</li>
                     <li class="nav-item"><a href="" class="nav-link"></a>Projects</li>
-                    <li class="nav-item"><a href="" class="nav-link"></a>Contact</li>
                 </ul>
             </div>
         </div>
