--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
     <title>Hello</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
-    <script defer src="bundle.js"></script>
+    <script type="text/javascript">
+        function changeText(obj, text) {
+            obj.innerText = text;
+
+        }
+
+        function changeText2(obj, text) {
+            obj.innerText = text;
+        }
+
+        function changeBgColor(obj, colorName){
+            obj.style.backgroundColor = colorName;
+        }
+    </script>
 </head>
 <body>
-    <h1>Welcome to our page</h1>
+    <h1 onmouseover="changeBgColor(this, 'green')" onmouseout="changeBgColor(this, 'white')">Welcome to our page</h1>
     
     <nav class="navbar bg-light navbar-light navbar-expand-lg">
         <div class="container">
@@ -26,7 +39,9 @@
             </div>
         </div>
     </nav>
-    <h2>This is an introduction to JS in the Browser</h2>
-    <p>Hello user! Only cool kids can see the secret message</p>
+    <div class="container2">
+        <h2 onmouseover="changeText2(this, 'Welcome. We have been expecting you')" onmouseout="changeText2(this, 'This is an introduction to JS in the Browser')">This is an introduction to JS in the Browser</h2>
+        <p onmouseover="changeText(this, 'You are a cool kid. Enjoy this message: When my neighbors surprised me with homemade chocolate chip cookies, it really made my day.')" onmouseout="changeText(this, 'Hello user! Only cool kids can see the secret message')">Hello user! Only cool kids can see the secret message</p>
+    </div>
 </body>
 </html>
